--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 11.798494338989258,
-            "y": 9.454275131225586,
-            "z": 11.921346664428711
+            "x": 0.0977528989315033,
+            "y": 7.826644420623779,
+            "z": 6.311028003692627
         },
         "projection": 0,
         "target": {
-            "x": -23.617185592651367,
-            "y": -19.597578048706055,
-            "z": -8.121841430664063
+            "x": -10.685178756713867,
+            "y": -8.847789764404297,
+            "z": -39.576908111572266
         },
         "type": "camera",
         "up": {
@@ -38,7 +38,7 @@
         "is_dynamic": false,
         "lodEnabled": false,
         "mass": 1.0,
-        "material_path": "",
+        "material_path": "project/game/materials/gate.mat",
         "model_path": "project/game/assets/gate.obj",
         "name": "gate",
         "normal_texture_path": "",
@@ -66,9 +66,9 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.5,
+            "DiffuseIntensity": 0.6340000033378601,
             "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
+            "SpecularIntensity": 0.41100001335144043,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
@@ -131,8 +131,8 @@
     },
     {
         "collider_type": 0,
-        "damping": 0.5,
-        "friction": 0.800000011920929,
+        "damping": 0.0,
+        "friction": 1.0,
         "id": 2,
         "is_dynamic": true,
         "lodEnabled": true,
@@ -193,7 +193,7 @@
             "y": -0.5270000100135803,
             "z": 0.14300000667572021
         },
-        "id": 8096,
+        "id": 0,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 0,
