--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 0.0977528989315033,
-            "y": 7.826644420623779,
-            "z": 6.311028003692627
+            "x": 0.9165610074996948,
+            "y": 7.538040637969971,
+            "z": 8.416399955749512
         },
         "projection": 0,
         "target": {
-            "x": -10.685178756713867,
-            "y": -8.847789764404297,
-            "z": -39.576908111572266
+            "x": -9.560037612915039,
+            "y": -10.075752258300781,
+            "z": -37.1906852722168
         },
         "type": "camera",
         "up": {
@@ -26,7 +26,7 @@
             "y": 1.0,
             "z": 1.0
         },
-        "bloom": false,
+        "bloom": true,
         "bloomBrightness": 0.0,
         "type": "world settings"
     },
@@ -193,8 +193,8 @@
             "y": -0.5270000100135803,
             "z": 0.14300000667572021
         },
-        "id": 0,
-        "intensity": 0.5,
+        "id": 130115152,
+        "intensity": 0.0,
         "isChild": false,
         "light_type": 0,
         "name": "",
