Improved ExitWindowRequested code structure

--- a/imgui.ini
+++ b/imgui.ini
@@ -113,6 +113,11 @@ Size=533,415
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Are you sure you want to exit?]
+Pos=812,441
+Size=370,90
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=369,916 Selected=0xB6EB8CBE
