--- a/imgui.ini
+++ b/imgui.ini
@@ -72,7 +72,7 @@ Collapsed=0
 Pos=839,626
 Size=560,346
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000000A,0
 
 [Window][Inspector]
 Pos=1454,56
@@ -118,14 +118,22 @@ Pos=812,441
 Size=370,90
 Collapsed=0
 
+[Window][]
+Pos=371,626
+Size=370,346
+Collapsed=0
+DockId=0x00000009,0
+
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=369,916 Selected=0xB6EB8CBE
-  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=1453,916 Split=X
-    DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=1028,916 Split=Y
-      DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1824,567 CentralNode=1 Selected=0xE8C23EBC
-      DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=1824,346 Split=X Selected=0x567E8AAB
-        DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=466,399 Selected=0x567E8AAB
-        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=560,399 Selected=0x529688BB
-    DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=423,916 Selected=0x7C689C01
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X
+  DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=369,916 Selected=0xB6EB8CBE
+  DockNode          ID=0x00000002 Parent=0x8B93E3BD SizeRef=1453,916 Split=X
+    DockNode        ID=0x00000007 Parent=0x00000002 SizeRef=1028,916 Split=Y
+      DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=1824,567 CentralNode=1 Selected=0xE8C23EBC
+      DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=1824,346 Split=X Selected=0x567E8AAB
+        DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=466,399 Selected=0x567E8AAB
+        DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=560,399 Split=X Selected=0x529688BB
+          DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=369,346 Selected=0xC0DDF3AC
+          DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=657,346 Selected=0x529688BB
+    DockNode        ID=0x00000008 Parent=0x00000002 SizeRef=423,916 Selected=0x7C689C01
 
