--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 8.370542526245117,
-            "y": 6.711329460144043,
-            "z": 7.249653339385986
+            "x": 2.3734169006347656,
+            "y": 0.667745053768158,
+            "z": -0.24363923072814941
         },
         "projection": 0,
         "target": {
-            "x": 1.9718308448791504,
-            "y": 3.2873966693878174,
-            "z": 0.08495903015136719
+            "x": -44.39313507080078,
+            "y": -14.108246803283691,
+            "z": 9.480093002319336
         },
         "type": "camera",
         "up": {
@@ -26,72 +26,27 @@
             "y": 1.0,
             "z": 1.0
         },
-        "bloom": false,
-        "bloomBrightness": -1.1030000448226929,
+        "bloom": true,
+        "bloomBrightness": 0.0,
         "type": "world settings"
     },
     {
-        "collider_type": 1,
+        "collider_type": 4,
+        "damping": 0.0,
+        "friction": 1.0,
         "id": 0,
-        "is_dynamic": true,
-        "lodEnabled": true,
-        "mass": 1.0,
-        "material_path": "project/game/materials/gate.mat",
-        "model_path": "project/game/assets/gate.obj",
-        "name": "gate",
-        "normal_texture_path": "",
-        "position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 2.0,
-            "y": 1.7000000476837158,
-            "z": 2.0
-        },
-        "script_index": "",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.6340000033378601,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.41100001335144043,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "collider_type": 0,
-        "id": 1,
-        "is_dynamic": true,
+        "is_dynamic": false,
         "lodEnabled": true,
         "mass": 1.0,
         "material_path": "",
         "mesh_type": 1,
         "model_path": "",
-        "name": "Player",
+        "name": "Unnamed Entity",
         "normal_texture_path": "",
         "position": {
             "x": 0.0,
-            "y": 1.0999994277954102,
-            "z": 2.0000009536743164
+            "y": 0.0,
+            "z": 0.0
         },
         "relative_position": {
             "x": 0.0,
@@ -109,8 +64,8 @@
             "y": 1.0,
             "z": 1.0
         },
-        "script_index": "coins collector0",
-        "script_path": "project/game/coins collector.py",
+        "script_index": "",
+        "script_path": "",
         "surface_material": {
             "DiffuseIntensity": 0.5,
             "Roughness": 0.5,
@@ -126,102 +81,7 @@
         "type": "entity"
     },
     {
-        "collider_type": 0,
-        "id": 2,
-        "is_dynamic": false,
-        "lodEnabled": true,
-        "mass": 1.0,
-        "material_path": "project/game/materials/file1.mat",
-        "mesh_type": 4,
-        "model_path": "",
-        "name": "Floor",
-        "normal_texture_path": "",
-        "position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 1000.0,
-            "y": 0.009999999776482582,
-            "z": 1000.0
-        },
-        "script_index": "",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.3930000066757202,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.41100001335144043,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "collider_type": 0,
-        "id": 3,
-        "is_dynamic": false,
-        "lodEnabled": false,
-        "mass": 1.0,
-        "material_path": "project/game/materials/house.mat",
-        "model_path": "project/game/assets/LOD0_concrete_house_004.obj",
-        "name": "house",
-        "normal_texture_path": "",
-        "position": {
-            "x": -24.300006866455078,
-            "y": 0.0,
-            "z": -9.49999713897705
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 1.0,
-            "y": 1.0,
-            "z": 1.0
-        },
-        "script_index": "",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.43799999356269836,
-            "Roughness": 0.0,
-            "SpecularIntensity": 0.0,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.0
-        },
-        "texture_path": "",
-        "type": "entity"
-    },
-    {
-        "attenuation": 0.0,
+        "attenuation": 9.999999747378752e-05,
         "color": {
             "a": 255.0,
             "b": 255.0,
@@ -234,15 +94,15 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 0,
-        "intensity": 0.6000000238418579,
+        "id": 2,
+        "intensity": 5.0,
         "isChild": false,
         "light_type": 1,
-        "name": "",
+        "name": "Light",
         "position": {
             "x": 4.0,
-            "y": 38.10001754760742,
-            "z": 3.600001573562622
+            "y": 5.0,
+            "z": 3.0
         },
         "relative_position": {
             "x": 0,
