Optimized bloom to reach 900 fps locally

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 2.3734169006347656,
-            "y": 0.667745053768158,
-            "z": -0.24363923072814941
+            "x": 4.9025068283081055,
+            "y": 3.786262273788452,
+            "z": -1.2602299451828003
         },
         "projection": 0,
         "target": {
-            "x": -44.39313507080078,
-            "y": -14.108246803283691,
-            "z": 9.480093002319336
+            "x": -33.288597106933594,
+            "y": -28.232967376708984,
+            "z": 2.764704704284668
         },
         "type": "camera",
         "up": {
@@ -27,7 +27,7 @@
             "z": 1.0
         },
         "bloom": true,
-        "bloomBrightness": 0.0,
+        "bloomBrightness": 2.0,
         "type": "world settings"
     },
     {
@@ -94,11 +94,11 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 2,
+        "id": -853140050,
         "intensity": 5.0,
         "isChild": false,
         "light_type": 1,
-        "name": "Light",
+        "name": "",
         "position": {
             "x": 4.0,
             "y": 5.0,
