Save/Load skybox color

--- a/project.json
+++ b/project.json
@@ -8,9 +8,9 @@
         },
         "projection": 0,
         "target": {
-            "x": -33.288597106933594,
-            "y": -28.232967376708984,
-            "z": 2.764704704284668
+            "x": -37.983863830566406,
+            "y": -20.404088973999023,
+            "z": 7.4333391189575195
         },
         "type": "camera",
         "up": {
@@ -28,6 +28,12 @@
         },
         "bloom": true,
         "bloomBrightness": 2.0,
+        "skyboxColor": {
+            "w": 1.0,
+            "x": 1.0,
+            "y": 0.0,
+            "z": 0.0
+        },
         "type": "world settings"
     },
     {
@@ -94,7 +100,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": -853140050,
+        "id": 0,
         "intensity": 5.0,
         "isChild": false,
         "light_type": 1,
