Save/Load Bloom Samples

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 4.9025068283081055,
-            "y": 3.786262273788452,
-            "z": -1.2602299451828003
+            "x": 14.61479663848877,
+            "y": 10.142415046691895,
+            "z": -3.270660638809204
         },
         "projection": 0,
         "target": {
-            "x": -37.983863830566406,
-            "y": -20.404088973999023,
-            "z": 7.4333391189575195
+            "x": -30.036582946777344,
+            "y": -10.245583534240723,
+            "z": 6.246511459350586
         },
         "type": "camera",
         "up": {
@@ -28,6 +28,7 @@
         },
         "bloom": true,
         "bloomBrightness": 2.0,
+        "bloomSamples": 25.0,
         "skyboxColor": {
             "w": 1.0,
             "x": 1.0,
@@ -100,7 +101,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 0,
+        "id": 8096,
         "intensity": 5.0,
         "isChild": false,
         "light_type": 1,
