Improved bloom quality

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 14.61479663848877,
-            "y": 10.142415046691895,
-            "z": -3.270660638809204
+            "x": 4.095438480377197,
+            "y": 4.468181133270264,
+            "z": -0.5990793704986572
         },
         "projection": 0,
         "target": {
-            "x": -30.036582946777344,
-            "y": -10.245583534240723,
-            "z": 6.246511459350586
+            "x": -26.658842086791992,
+            "y": -34.69820785522461,
+            "z": 3.891810178756714
         },
         "type": "camera",
         "up": {
@@ -27,13 +27,13 @@
             "z": 1.0
         },
         "bloom": true,
-        "bloomBrightness": 2.0,
-        "bloomSamples": 25.0,
+        "bloomBrightness": 0.2240000069141388,
+        "bloomSamples": 6.0,
         "skyboxColor": {
             "w": 1.0,
             "x": 1.0,
-            "y": 0.0,
-            "z": 0.0
+            "y": 1.0,
+            "z": 1.0
         },
         "type": "world settings"
     },
@@ -101,7 +101,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 8096,
+        "id": 0,
         "intensity": 5.0,
         "isChild": false,
         "light_type": 1,
