Save/Load texture tiling

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 2.435230255126953,
-            "y": 4.933925628662109,
-            "z": 8.686176300048828
+            "x": 2.8432459831237793,
+            "y": 7.64752197265625,
+            "z": 11.585502624511719
         },
         "projection": 0,
         "target": {
-            "x": -5.825380325317383,
-            "y": -21.61628532409668,
-            "z": -32.86829376220703
+            "x": -1.348658561706543,
+            "y": -28.386348724365234,
+            "z": -22.82253646850586
         },
         "type": "camera",
         "up": {
@@ -85,6 +85,10 @@
             "shininess": 1.0
         },
         "texture_path": "project/game/models/textures/rubber_tiles_diff_4k.png",
+        "tiling": [
+            9.260000228881836,
+            18.209999084472656
+        ],
         "type": "entity"
     },
     {
