--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": 1.3502604961395264,
-            "y": 7.012027263641357,
-            "z": 10.226083755493164
+            "x": 3.670452117919922,
+            "y": 10.144061088562012,
+            "z": 10.987704277038574
         },
         "projection": 0,
         "target": {
-            "x": 0.5556504726409912,
-            "y": -32.76121139526367,
-            "z": -20.062288284301758
+            "x": -17.45427894592285,
+            "y": -13.607550621032715,
+            "z": -27.607730865478516
         },
         "type": "camera",
         "up": {
@@ -22,18 +22,18 @@
     {
         "ambientColor": {
             "w": 1.0,
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
         },
         "bloom": false,
         "bloomBrightness": 0.0,
         "bloomSamples": 6.0,
         "skyboxColor": {
             "w": 1.0,
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
         },
         "type": "world settings"
     },
@@ -46,13 +46,13 @@
         "lodEnabled": true,
         "mass": 1.0,
         "material_path": "project/game/materials/file1.mat",
-        "mesh_type": 4,
+        "mesh_type": 1,
         "model_path": "",
-        "name": "Unnamed Entity",
-        "normal_texture_path": "project/game/models/textures/rubber_tiles_nor_gl_4k.png",
+        "name": "Floor",
+        "normal_texture_path": "",
         "position": {
-            "x": 4.100002288818359,
-            "y": 0.6999993324279785,
+            "x": 0.0,
+            "y": 0.0,
             "z": 0.0
         },
         "relative_position": {
@@ -65,10 +65,10 @@
             "y": 0.0,
             "z": 0.0
         },
-        "roughness_texture_path": "project/game/models/textures/rubber_tiles_rough_4k.png",
+        "roughness_texture_path": "",
         "scale": {
             "x": 100.0,
-            "y": 1.0,
+            "y": 0.10000000149011612,
             "z": 100.0
         },
         "script_index": "",
@@ -84,10 +84,64 @@
             },
             "shininess": 1.0
         },
-        "texture_path": "project/game/models/textures/rubber_tiles_diff_4k.png",
+        "texture_path": "",
         "tiling": [
-            9.260000228881836,
-            18.209999084472656
+            1.0,
+            1.0
+        ],
+        "type": "entity"
+    },
+    {
+        "collider_type": 0,
+        "damping": 0.0,
+        "friction": 1.0,
+        "id": 1,
+        "is_dynamic": true,
+        "lodEnabled": true,
+        "mass": 1.0,
+        "material_path": "",
+        "mesh_type": 1,
+        "model_path": "",
+        "name": "Unnamed Entity",
+        "normal_texture_path": "",
+        "position": {
+            "x": 0.0,
+            "y": 3.8000049591064453,
+            "z": 0.0
+        },
+        "relative_position": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "rotation": {
+            "x": 0.0,
+            "y": 0.0,
+            "z": 0.0
+        },
+        "roughness_texture_path": "",
+        "scale": {
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
+        },
+        "script_index": "",
+        "script_path": "",
+        "surface_material": {
+            "DiffuseIntensity": 0.5,
+            "Roughness": 0.5,
+            "SpecularIntensity": 0.5,
+            "SpecularTint": {
+                "x": 1.0,
+                "y": 1.0,
+                "z": 1.0
+            },
+            "shininess": 0.5
+        },
+        "texture_path": "",
+        "tiling": [
+            1.0,
+            1.0
         ],
         "type": "entity"
     },
@@ -101,15 +155,15 @@
         },
         "cutOff": 10.0,
         "direction": {
-            "x": -1.0,
-            "y": -1.0,
-            "z": 1.0
+            "x": 0.4000000059604645,
+            "y": 0.4000000059604645,
+            "z": -0.4000000059604645
         },
         "id": 2,
-        "intensity": 1.843999981880188,
+        "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
-        "name": "",
+        "name": "Light",
         "position": {
             "x": 4.0,
             "y": 5.0,
