Scene Editor Icon

--- a/imgui.ini
+++ b/imgui.ini
@@ -130,12 +130,24 @@ Size=453,447
 Collapsed=0
 DockId=0x0000000C,0
 
+[Window][ Scene Editor]
+Pos=371,57
+Size=1021,466
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][ Scene Editor]
+Pos=371,57
+Size=1021,466
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
 DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X
   DockNode          ID=0x00000001 Parent=0x8B93E3BD SizeRef=369,916 Selected=0xB6EB8CBE
   DockNode          ID=0x00000002 Parent=0x8B93E3BD SizeRef=1453,916 Split=X
     DockNode        ID=0x00000007 Parent=0x00000002 SizeRef=1021,916 Split=Y
-      DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=1824,466 CentralNode=1 Selected=0xE8C23EBC
+      DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=1824,466 CentralNode=1 Selected=0xA951099C
       DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=1824,447 Split=X Selected=0x567E8AAB
         DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=466,399 Split=X Selected=0x567E8AAB
           DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=566,447 Selected=0x567E8AAB
