--- a/imgui.ini
+++ b/imgui.ini
@@ -109,7 +109,7 @@ DockId=0x00000001,0
 
 [Window][ Assets Explorer]
 Pos=371,525
-Size=649,447
+Size=536,447
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -125,8 +125,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][ Code Editor]
-Pos=1022,525
-Size=370,447
+Pos=909,525
+Size=483,447
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -149,9 +149,9 @@ DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split
     DockNode        ID=0x00000007 Parent=0x00000002 SizeRef=1021,916 Split=Y
       DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=1824,466 CentralNode=1 Selected=0xA951099C
       DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=1824,447 Split=X Selected=0x567E8AAB
-        DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=466,399 Split=X Selected=0x567E8AAB
-          DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=649,447 Selected=0x567E8AAB
-          DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=370,447 Selected=0x4C3AEE3A
+        DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=466,399 Split=X Selected=0x4C3AEE3A
+          DockNode  ID=0x0000000B Parent=0x00000005 SizeRef=536,447 Selected=0x567E8AAB
+          DockNode  ID=0x0000000C Parent=0x00000005 SizeRef=483,447 Selected=0x4C3AEE3A
         DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=553,399 Split=X Selected=0x529688BB
           DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=369,346 Selected=0xC0DDF3AC
           DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=657,346 Selected=0x529688BB
