when creating entities from a script, initialize default model - cube

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": -1.0604712963104248,
-            "y": 12.800086975097656,
-            "z": -6.247636795043945
+            "x": -11.72862720489502,
+            "y": 20.994993209838867,
+            "z": -4.1268534660339355
         },
         "projection": 0,
         "target": {
-            "x": 7.858179092407227,
-            "y": -17.467363357543945,
-            "z": 32.53813934326172
+            "x": 21.52239227294922,
+            "y": -13.094419479370117,
+            "z": 11.113868713378906
         },
         "type": "camera",
         "up": {
@@ -109,7 +109,7 @@
         "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
-        "name": "Light",
+        "name": "",
         "position": {
             "x": 4.0,
             "y": 5.0,
